\name{TVTB-NEWS}
\title{NEWS: The VCF Tool Box}

\section{Changes in version 1.1.11 2017-04-08}{
\subsection{Major changes}{
\itemize{
\item Update NAMESPACE imports following move of \code{GRangesFilter}
and \code{GenenameFilter} from \code{AnnotationFilter}
to \code{ensembldb}.
}
}
}

\section{Changes in version 1.1.10 2016-11-18}{
\subsection{Bug fix}{
\itemize{
\item Disambiguated the variable \code{metric} that was used for two different
    things in the same method and produced incorrect \code{DataTrack} name in
    \code{plotInfo}.
}
}
\subsection{Major changes}{
\itemize{
\item Vignette uses alternate allele frequency to demonstrate \code{pairsInfo}
    and \code{plotInfo} methods.
}
}
}

\section{Changes in version 1.1.9 2016-11-18}{
\subsection{Major changes}{
\itemize{
\item New argument \code{zero.rm} in method \code{plotInfo} to hide data points
    with value of zero on the Y axis. Intended to reduce overplotting of
    variants absent from phenotype levels, and instead emphasise variants of
    low frequency.
}
}
}

\section{Changes in version 1.1.8 2016-11-14}{
\subsection{New features}{
\itemize{
\item New method \code{pairsInfo} to visualise a matrix of pairwise plots
    that displays a metric calculated in levels of a given phenotype,
    and stored in columns of the \code{info} slot of a \code{VCF} object.
\item \code{ggpairs} method imported from the \code{GGally} package.
}
}
\subsection{Bug fix}{
\itemize{
\item Updated pattern used to detect INFO columns for a given metric, to be
    more specific.
}
}
\subsection{Major changes}{
\itemize{
\item Internal method \code{.findInfoMetricColumns} moved to \code{utils.R},
    as it is now used in two different user-visible methods.
\item Updated \code{Introduction} vignette to better present usage of the
    \code{addFrequencies} method, better present \emph{VCF filter rules},
    and introduce the new method \code{pairsInfo}.
}
}
}

\section{Changes in version 1.1.7 2016-11-11}{